--- a/research.html
+++ b/research.html
@@ -195,7 +195,7 @@
 									the faint-end slope of our AGN XLF flattens with redshift. While we find that both BLAGNs and
 									non-BLAGNs evolve in luminosity and density with increasing redshift, non-BLAGNs exhibit the strongest
 									evolution and peak in number density near z=1. The XLF of these obscured AGNs tend to have a lower break luminosity and higher
-									normalization across z=1-4. This work (Radzom et al. 2022) was accepted to ApJ in October 2022 and is on arXiv. </p>
+									normalization across z=1-4. This work (Radzom et al. 2022) was published in ApJ in November 2022 (doi:10.3847/1538-4357/ac9bfe). </p>
 									
 									<figure>
 										<img src="images/ssa22_full_LF_fixedLx_noproto.png" width="800" height="305" align="right" style="margin: 10px 0px 0px 0px;" alt="" />
