main paragraph content updates

--- a/index.html
+++ b/index.html
@@ -61,20 +61,22 @@
 					<div class="title">About Me</div>
 					<div class="container">
 						
-						<p class="style1">I am a 3rd year Astronomy PhD candidate at Indiana University - Bloomington (IU) with a minor in Scientific Computing.
-							I work with <a href="https://orcid.org/0000-0002-7846-6981/">Dr. Songhu Wang</a> on several projects related to short-period gas giant
-							formation. Particularly, I am interested in using N-body simulations to dynamically study the origins of hot and warm Jupiters
-							in <em>Kepler</em>-like multi-planet systems. Additionally, I am heavily involved in outreach efforts at IU, serving as the Undergraduate
-							Research Coordinator for the Astronomy Department, writing for ScIU (IU's graduate science blog), and regularly volunteering
-							at local events. </p>
+						<p class="style1">I am a rising 5th-year Astronomy PhD candidate at Indiana University - Bloomington (IU) with a graduate minor in Scientific Computing.
+							I am broadly interested in exoplanets and planetary science. My dissertation, under the advisorship of 
+							<a href="https://orcid.org/0000-0002-7846-6981/">Dr. Songhu Wang</a>, involves the use of numerical and observational efforts to 
+							study the origins of short-period gas giants. I also participated in NASA's Planetary Science Summer School, where I worked as Science Lead
+							on a New Frontiers mission concept for an orbiting spacecraft to Saturn's moon, Titan. 
+							Additionally, I am heavily involved in scientific outreach and serve in various leadership roles at IU, including Undergraduate
+							Research Coordinator and Department Tea Talk Coordinator. </p>
 							<p class="style1">I earned a B.S. in Astronomy-Physics, a B.S. in Physics and a 
 							certificate in Computer Sciences from the University of Wisconsin - Madison in May of 2020. 
 							During my undergraduate career, I also participated in astronomy and physics outreach as the Volunteer Coordinator and Vice President
 						of the Astronomy Club. </p>
 						<p class="style1">When not doing science, I am likely on my feet. First and foremost, I am an avid long distance
-						runner of 10 years. These days, I run anything from a 5ks to full marathons, but my current focus is to make it out to the Boston marathon in 2024.
+						runner of 10+ years. These days, I mainly run full marathons, and plan to participate in the 2025 Boston Marathon.
 						I also love hiking anywhere out in nature; anything with lakes, rivers, and mountains are a plus! Originating from
-						Minnesota, I try to make the most of my winters by cross-country skiing. </p>
+						Minnesota, I try to make the most of my winters by cross-country skiing. More recently, I've taken up ultimate frisbee and play
+						in a community league.</p>
 						<!--<p class="style2">
 							Big text
 						</p>
