added gleam pic

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 							on a New Frontiers mission concept for an orbiting spacecraft to Saturn's moon, Titan. 
 							Additionally, I am heavily involved in scientific outreach and serve in various leadership roles at IU, including Undergraduate
 							Research Coordinator and Department Tea Talk Coordinator. </p>
+						<div>
+							<img src="images/brandon_gleam2022_title_slide.jpg" width="468" height="347" align="left" style="margin: 10px 10px 0px 0px;" alt="Brandon's GLEAM 2022 talk." />
+							</div>
 							<p class="style1">I earned a B.S. in Astronomy-Physics, a B.S. in Physics and a 
 							certificate in Computer Sciences from the University of Wisconsin - Madison in May of 2020. 
 							During my undergraduate career, I also participated in astronomy and physics outreach as the Volunteer Coordinator and Vice President
