--- a/index.html
+++ b/index.html
@@ -69,12 +69,15 @@
 							Additionally, I am heavily involved in scientific outreach and serve in various leadership roles at IU, including Undergraduate
 							Research Coordinator and Department Tea Talk Coordinator. </p>
 						<div>
-							<img src="images/brandon_gleam2022_cropped.jpg" width="384" height="384" align="right" style="margin: 0px 20px 10px 20px;" alt="Brandon's GLEAM 2022 talk." />						</div>
 							<div>
+							<img src="images/brandon_gleam2022_cropped.jpg" width="384" height="384" align="right" class="block"
+								style="margin: 0px 20px 10px 20px;" alt="Brandon's GLEAM 2022 talk." />						</div>
+							<\div>
+								<div>
 								<img src="images/europa_brandon_cropped.jpg" width="440" height="441" align="right" 
 									style="margin: 10px 20px 0px 20px;" alt="Brandon in front of the fully-assembled 
-									Europa Clipper spacecraft at JPL." class="block"/>
-							</div>
+									Europa Clipper spacecraft at JPL."/>
+								</div>
 						</div>
 							<p class="style1">I earned a B.S. in Astronomy-Physics, a B.S. in Physics and a 
 							certificate in Computer Sciences from the University of Wisconsin - Madison in May of 2020. 
