--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<div>
 							<div>
 							<img src="images/brandon_gleam2022_cropped.jpg" width="384" height="384" align="right" class="block"
-								style="margin: 0px 20px 10px 20px;" alt="Brandon's GLEAM 2022 talk." />						</div>
+								style="margin: 0px 20px 10px 20px;" alt="Brandon's GLEAM 2022 talk." />
 							<\div>
 								<div>
 								<img src="images/europa_brandon_cropped.jpg" width="440" height="441" align="right" 
