--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							certificate in Computer Sciences from the University of Wisconsin - Madison in May of 2020. 
 							During my undergraduate career, I also participated in astronomy and physics outreach as the Volunteer Coordinator and Vice President
 						of the Astronomy Club. </p>
-						</div>
+						<div>
 							<img src="images/europa_brandon_cropped.jpg" width="300" height="300" align="right" 
 									style="margin: 10px 20px 0px 20px;" alt="Brandon in front of the fully-assembled 
 									Europa Clipper spacecraft at JPL."/>
