--- a/index.html
+++ b/index.html
@@ -72,16 +72,17 @@
 							on a New Frontiers mission concept for an orbiting spacecraft to Saturn's moon, Titan. 
 							Additionally, I am heavily involved in scientific outreach and serve in various leadership roles at IU, including Undergraduate
 							Research Coordinator and Department Tea Talk Coordinator. </p>
-						
-							<p class="style1">I earned a B.S. in Astronomy-Physics, a B.S. in Physics and a 
-							certificate in Computer Sciences from the University of Wisconsin - Madison in May of 2020. 
-							During my undergraduate career, I also participated in astronomy and physics outreach as the Volunteer Coordinator and Vice President
-						of the Astronomy Club. </p>
 						<div>
 							<img src="images/europa_brandon_cropped.jpg" width="300" height="300" align="right" 
 									style="margin: 10px 20px 0px 20px;" alt="Brandon in front of the fully-assembled 
 									Europa Clipper spacecraft at JPL."/>
+							<p>Standing above the fully-assembled Europa Clipper spacecraft at NASA's Jet Propulsion Laboratory.</p>
 						</div>
+							<p class="style1">I earned a B.S. in Astronomy-Physics, a B.S. in Physics and a 
+							certificate in Computer Sciences from the University of Wisconsin - Madison in May of 2020. 
+							During my undergraduate career, I also participated in astronomy and physics outreach as the Volunteer Coordinator and Vice President
+						of the Astronomy Club. </p>
+						
 						<p class="style1">When not doing science, I am likely on my feet. First and foremost, I am an avid long distance
 						runner of 10+ years. These days, I mainly run full marathons, and plan to participate in the 2025 Boston Marathon.
 						I also love hiking anywhere out in nature; anything with lakes, rivers, and mountains are a plus! Originating from
