--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 				<section id="intro" class="wrapper style1">
 					<div class="title">About Me</div>
 					<div class="container">
-						
-						<div>
-							<img src="images/brandon_gleam2022_cropped.jpg" width="300" height="300" align="right" class="block"
+						<figure>
+						  <img src="images/brandon_gleam2022_cropped.jpg" width="300" height="300" align="right" class="block"
 								style="margin: 0px 20px 10px 20px;" alt="Brandon's GLEAM 2022 talk." />
-							<figcaption class="image-caption-text">Giving a fun presentation at the 2022 Great Lakes Area Meeting on quiescent origins
+						  <figcaption>Giving a fun presentation at the 2022 Great Lakes Area Meeting on quiescent origins
 								for hot Jupiters!</figcaption>
-						</div>
+						</figure>
+						
 						<p class="style1">I am a rising 5th-year Astronomy PhD candidate at Indiana University - Bloomington (IU) with a graduate minor in Scientific Computing.
 							I am broadly interested in exoplanets and planetary science. My dissertation, under the advisorship of 
 							<a href="https://orcid.org/0000-0002-7846-6981/">Dr. Songhu Wang</a>, involves the use of numerical and observational efforts to 
