--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 						<aside>
 						  <img src="images/brandon_gleam2022_cropped.jpg" width="300" height="300" align="right" class="block"
 								style="margin: 0px 20px 10px 20px;" alt="Brandon's GLEAM 2022 talk." />
-						  <figcaption>Giving a fun presentation at the 2022 Great Lakes Area Meeting on quiescent origins
-								for hot Jupiters!</figcaption>
+						  <p>Giving a fun presentation at the 2022 Great Lakes Area Meeting on quiescent origins
+								for hot Jupiters!</p>
 						</aside>
 						
 						<p class="style1">I am a rising 5th-year Astronomy PhD candidate at Indiana University - Bloomington (IU) with a graduate minor in Scientific Computing.
