added RM section

--- a/research.html
+++ b/research.html
@@ -45,8 +45,21 @@
 							<div id="content">
 								<article class="box post">
 									<header class="style1">
-										<h2>In Situ Origins of Hot Jupiters</h2>
-										<p>2021-Present</p>
+										<h2>Stellar Obliquity Measurements of Short-Period Giant Systems</h2>
+										<p>2021-2023</p>
+									</header>
+									<div>
+									    <img src="images/subSat_RM_square.jpg" width="300" height="300" align="left" style="margin: 10px 10px 0px 0px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
+									    <p>Radzom et al. (2024), Accepted to AJ.</p>
+									</div>
+									<p>text.</p>
+								</article>
+								<br>
+								<br>
+								<article class="box post">
+									<header class="style1">
+										<h2>N-body Simulations of Short-Period Giant Systems</h2>
+										<p>2021-2023</p>
 									</header>
 									<div>
 									    <img src="images/HJ_irradiated.jpg" width="468" height="347" align="left" style="margin: 10px 10px 0px 0px;" alt="NASA/Ames/JPL-Caltech" />
