--- a/research.html
+++ b/research.html
@@ -46,13 +46,18 @@
 								<article class="box post">
 									<header class="style1">
 										<h2>Stellar Obliquity Measurements of Short-Period Giant Systems</h2>
-										<p>2021-2023</p>
+										<p>2023-Present</p>
+									</header>
+									<header class="style1">
+										<h3>Evidence for Primordial Alignment: Insights from Sub-Saturns TOI-5126 and TOI-5398</h3>
+										<p>2023-2024</p>
 									</header>
 									<div>
 									    <img src="images/subSat_RM_square.jpg" width="300" height="300" align="left" style="margin: 10px 10px 0px 0px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
 									    <p>Radzom et al. (2024), Accepted to AJ.</p>
 									</div>
-									<p>text.</p>
+									<p>Sub-Saturns, with masses intermediate of Neptune and Jupiter, represent an interesting population to study both the origins
+										of giant planets and the mechanisms by which the orbital axes of planets become misaligned with the stellar spin axes.</p>
 								</article>
 								<br>
 								<br>
@@ -65,17 +70,18 @@
 									    <img src="images/HJ_irradiated.jpg" width="468" height="347" align="left" style="margin: 10px 10px 0px 0px;" alt="NASA/Ames/JPL-Caltech" />
 									    <p>Image Credit: NASA/Ames/JPL-Caltech</p>
 									</div>
-									<p>The longest-standing mystery in the field of exoplanets is the origin of short-period gas giants.
-										The very shortest-period population of such planets, known as hot Jupiters, have conventionally been thought
-										to form through some dynamically violent process, as they are rarely observed to host nearby planetary companions.
-										While several variants of this inward migration
-										paradigm (e.g., disk migration, high-eccentricity migration) are successful in explaining the observed properties of hot Jupiters (and warm Jupiters),
-										none are fully consistent with the full suite of known characteristics.
-										Chief among these is the <em>observed isolation</em> of hot Jupiters relative to warm Jupiters,
-										wherein hot Jupiters host nearby low-mass planetary companion much less often
-										than their longer-period counterparts. The companion rates for these two populations should be similar
-										assuming either migration scenario, with quiescent disk migration favoring higher rates
-										than high-eccentricity migration.</p>
+									<p>The longest-standing mystery in the field of exoplanets is the origin of short-period gas giants, as the first exoplanet
+										discovered around a Sun-like star was a hot Jupiter, 51 Pegasi b.
+										Hot Jupiters, the shortest-period gas giants, have conventionally been thought
+										to form only through dynamically violent processes such as high-eccentricity migration.
+										One of the most commonly referenced pieces of evidence for this is the
+										<em>observed isolation</em> of hot Jupiters, wherein these giants rarely host nearby planetary companions.
+										Such companions would have been cleared out during the violent migration process, 
+										while giants undergoing less dramatic inward migration, such as warm Jupiters, may
+										more readily retain their nearby companions (see eccentric migration paradigm proposed by 
+										Wu et al. 2023).
+										. Indeed, there is strong evidence for a dichotomy in the nearby companion rates, with warm Jupiters
+									often being found in compact multi-planet systems (e.g., Huang et al. 2016).</p>
 
 									<p>Additionally, these migration-based formation scenarios are solely informed by the
 										architecture of our own solar system, which we now know to be the exception rather
