--- a/research.html
+++ b/research.html
@@ -45,19 +45,72 @@
 							<div id="content">
 								<article class="box post">
 									<header class="style1">
-										<h2>Stellar Obliquity Measurements of Short-Period Giant Systems</h2>
-										<p>2023-Present</p>
+										<h2>Dynamical Origins of Short-Period Giants</h2>
+										<p>2021-Present</p>
+										<p>The longest-standing mystery in the field of exoplanets is the origin of short-period gas giants, as the first exoplanet
+										discovered around a Sun-like star was a hot Jupiter, 51 Pegasi b.
+										Hot Jupiters, the shortest-period gas giants, have conventionally been thought
+										to form through dynamically violent processes such as high-eccentricity migration.
+										One of the most commonly referenced pieces of evidence for this is the
+										<em>observed isolation</em> of hot Jupiters, wherein these giants are rarely found to host nearby
+											planetary companions. Any such companions are expected to have been cleared out during the
+											violent migration process (see Mustill et al. 2015). 
+
+										
+										On the other hand, the wider-orbiting warm Jupiters are commonly found in compact multiple-planet
+											systems (Huang et al. 2016). This suggests that these giants have origins that are either completely independent of
+											hot Jupiters, or diverge during the dynamical evolutionary stages that take place after the
+											dissipation of the disk. In the latter scenario, giant planets may achieve a wide range of eccentricity
+											excitation in the post-disk phase, resulting in a spectrum of short orbital periods, eccentricities, stellar obliquities, and 
+											companion retention (see the eccentric migration paradigm described in Wu et al. 2023). My PhD dissertation aims
+											to address this question via a combination of observational and numerical studies detailed below.
+										</p>
 									</header>
 									<header class="style1">
-										<h3>Evidence for Primordial Alignment: Insights from Sub-Saturns TOI-5126 and TOI-5398</h3>
-										<p>2023-2024</p>
+										<h3>Stellar Obliquity Measurements Via The Rossiter-McLaughlin Effect</h3>
+									</header>
+									<p>Stellar obliquity, or the angle between the stellar spin axis and the orbit normal axis of its planet(s), is a unqiue
+									and informative indicator of a system's dynamical history. Despite decades of effort, it remains unclear whether spin-orbit
+										misalignment takes place during formation, with the protoplanetary disk present, or post-formation following 
+										the disappearence of the disk.</p>
+										
+										<p>The Rossiter-McLaughlin (RM) effect (Holt 1893, Rossiter 1924, McLaughlin 1924), which 
+										takes advantage of the time-resolved spectral effects of an actively transiting or eclipsing body, presents a reliable method
+									to determine a system's projected spin-orbit angle $\lambda$. With additional information on the stellar inclination, 
+									the true 3D stellar obliquity $\psi$ can be derived as well.</p>
+									<header class="style1">
+										<h4>TOI-5143 (Radzom et al. 2024b, in prep.)</h4>
+									</header>
+									<p>TOI-5143 is a hot Jupiter in a compact multi-planet system recently discovered by NASA's Transiting Exoplanet Survey Satellite (TESS)
+										mission, and is only the <em>third</em> of such systems to have its stellar obliquity measured. We use the Doppler Shadow
+									method of the RM effect to measure its stellar obliquity, finding it is well-aligned. Our result continues the trend of alignemnt 
+										seen in previous
+									spin-orbit measurements for other hot Jupiters with nearby companions (e.g., WASP-47 and WASP-84), as well as the current census of RM measurements
+									for compact multi-planet systems. This reinforces the hypothesis that planetary systems are largely primordially aligned,
+										with misalignments being acquired in the post-disk phase due to dynamical evolution. Further, our measurement
+									demonstrates that some hot Jupiters <em>must</em> have quiescent origins, having avoided achieving the large eccentricities
+									that would have otherwise destroyed their companions and/or excited their obliquities during their path to their close-in orbits.</p>
+									<header class="style1">
+										<h4>TOI-5126 and TOI-5398 (Radzom et al. 2024a, accepted to AJ)</h4>
 									</header>
 									<div>
-									    <img src="images/subSat_RM_square.jpg" width="300" height="300" align="left" style="margin: 10px 10px 0px 0px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
-									    <p>Radzom et al. (2024), Accepted to AJ.</p>
+									    <img src="images/subSat_RMs.jpg" width="1157" height="541" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
 									</div>
 									<p>Sub-Saturns, with masses intermediate of Neptune and Jupiter, represent an interesting population to study both the origins
-										of giant planets and the mechanisms by which the orbital axes of planets become misaligned with the stellar spin axes.</p>
+										of giant planets and the mechanisms by which the orbital axes of planets become misaligned with the stellar spin axes.
+										Despite decades of effort, the mechanisms by which the spin axis of a star and the orbital axes of its planets become
+										misaligned remain elusive. Particularly, it is of great interest whether the large spin-orbit misalignments observed
+										are driven primarily by high-eccentricity migration --- expected to have occurred for short-period, isolated planets
+										--- or reflect a more universal process that operates across systems with a variety of present-day architectures.
+										Compact multi-planet systems offer a unique opportunity to differentiate between these competing hypotheses, as their
+										tightly-packed configurations preclude violent dynamical histories, including high-eccentricity migration, allowing
+										them to trace the primordial disk plane. In this context, we report measurements of the sky-projected stellar obliquity
+										($\lambda$) via the Rossiter-McLaughlin effect for two sub-Saturns in multiple-transiting systems: TOI-5126\,b
+										($\lambda=1\pm 48 \degree$) and TOI-5398\,b ($\lambda=-24^{+14}_{-13} \degree$). Both are spin-orbit aligned,
+										joining a fast-growing group of just three other compact sub-Saturn systems, all of which exhibit spin-orbit alignment.
+										{\bf In aggregate with archival data, our} results strongly suggest that sub-Saturn systems are primordially aligned
+										and become misaligned largely in the post-disk phase, as appears to be the case increasingly for other exoplanet populations. 
+									</p>
 								</article>
 								<br>
 								<br>
@@ -67,7 +120,7 @@
 										<p>2021-2023</p>
 									</header>
 									<div>
-									    <img src="images/HJ_irradiated.jpg" width="468" height="347" align="left" style="margin: 10px 10px 0px 0px;" alt="NASA/Ames/JPL-Caltech" />
+									    <img src="images/HJ_irradiated.jpg" width="468" height="347" align="left" style="margin: 20px 20px 20px 20px;" alt="NASA/Ames/JPL-Caltech" />
 									    <p>Image Credit: NASA/Ames/JPL-Caltech</p>
 									</div>
 									<p>The longest-standing mystery in the field of exoplanets is the origin of short-period gas giants, as the first exoplanet
@@ -123,8 +176,8 @@
 								<br>
 								<article class="box post">
 									<header class="style1">
-										<h2>Parameterization of Stability in Hierarchical Multi-planet Systems</h2>
-										<p>2021-Present</p>
+										<h3>Parameterization of Stability in Hierarchical Multi-planet Systems</h3>
+										<p>2021</p>
 									</header>
 									<div>
 									    <img src="images/orbitsnap_stability.png" width="400" height="400" align="left" style="margin: 0px 10px 0px 0px;" alt="" />
