--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								for hot Jupiters!</p>-->
 						</aside>
 						
-						<p class="style1">I am a rising 5th-year Astronomy PhD candidate at Indiana University - Bloomington (IU) with a graduate minor in Scientific Computing.
+						<p class="style1">Hi! I am a rising 5th-year Astronomy PhD candidate at Indiana University - Bloomington (IU) with a graduate minor in Scientific Computing.
 							I am broadly interested in exoplanets and planetary science. My dissertation, under the advisorship of 
 							<a href="https://orcid.org/0000-0002-7846-6981/">Dr. Songhu Wang</a>, involves the use of numerical and observational efforts to 
 							study the origins of short-period gas giants. I am also greatly interested in planetary science, and participated in NASA's Planetary Science Summer School 
