added CV button at top of home page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 						<div id="logo">
 							<h1><a href="index.html">Brandon Radzom</a></h1>
 							<p>PhD Candidate at Indiana University</p>
+							<ul class="actions">
+							<li><a href="cv.html" class="button style3 large">CV</a></li>
+							</ul>
 							<img src="images/profheadshot_2021_square.jpg" alt="Prof headshot" width="300" height="300">
 						</div>
 					
