--- a/publications.html
+++ b/publications.html
@@ -44,13 +44,32 @@
 						<!-- Content -->
 							<div id="content">
 								<article class="box post">
+									<p class="style1">See my <a href="cv.html">CV</a> for the most complete and up-to-date list of publications.</p>
 									<header class="style1">
-										<h2>Refereed Works</h2>
+										<h2>First-Author Refereed Works</h2>
 										<!--<p>Tempus feugiat veroeros sed nullam dolore</p>-->
 									</header>
 									<p><font size="+2">
 									<ol style="color:black;">
-										<li><strong>Brandon T. Radzom</strong>, Anthony J. Taylor, Amy J. Barger, Lennox L. Cowie 2022. X-ray Sources in the Chandra Field SSA22, <em>ApJ</em> 940 114, doi:10.3847/1538-4357/ac9bfe</li>
+										<li><strong>Brandon T. Radzom</strong>, Songhu Wang, Bonan Pu, Malena Rice, Dong-Hong Wu 2024. Post-disk Evolution of Short-Period Gas Giants in Compact Multi-planet Systems:
+											A Mechanism to Produce the Observed Companionship Dichotomy, <em>submitted to ApJ</em> </li>
+										<li><strong>Brandon T. Radzom</strong>, Jiayin Dong, Malena Rice, Xian-Yu Wang, Samuel W. Yee, Tyler R. Fairnington,
+											Cristobal Petrovich, Songhu Wang 2024. Evidence for Primordial Alignment: Insights from Stellar Obliquity Measurements for Compact Sub-Saturn Systems, <em>accepted to AJ</em>, arXiv:2404.06504 </li>
+										<li><strong>Brandon T. Radzom</strong>, Anthony J. Taylor, Amy J. Barger,
+											Lennox L. Cowie 2022. X-ray Sources in the Chandra Field SSA22, <em>ApJ</em> 940 114, doi:10.3847/1538-4357/ac9bfe</li>
+									</ol>
+										</font></p>
+									<header class="style1">
+										<h2>Co-Author Refereed Works</h2>
+										<!--<p>Tempus feugiat veroeros sed nullam dolore</p>-->
+									</header>
+									<p><font size="+2">
+									<ol style="color:black;">
+										<li>Cassandra Seltzer, Rudi Lien, Brandon Radzom, et al. 2024. THUNDER: A Titan orbiter mission concept for the New Frontiers program, <em>submitted to PSJ</em></li>
+										<li>Jack Lubin, Xian-Yu Wang, Malena Rice, Jiayin Dong, Songhu Wang, <strong>Brandon T. Radzom</strong>, et al. 2023. TOI-1670 c, a 40 day
+											Orbital Period Warm Jupiter in a Compact System, Is Well Aligned, <em>ApJL</em>, 959 L5</li>
+										<li>Xian-Yu Wang, Malena Rice, Songhu Wang, Bonan Pu, Gudmundur Stefánsson, Suvrath Mahadevan, <strong>Brandon T. Radzom</strong>, et al. 2022. The Aligned
+											Orbit of WASP-148 b, the Only Known Hot Jupiter with a Nearby Warm Jupiter Companion, from NEID and HIRES, <em>ApJL</em>, 926 L8</li>
 									</ol>
 										</font></p>
 									<header class="style1">
@@ -58,6 +77,7 @@
 											</header>
 									<p><font size="+2">
 									<ol style="color:black;">
+										<li><em>Measuring Stellar Obliquities To Constrain the Origins of Exoplanets.</em> Fall 2023 WIYN Board Meeting</li>
 										<li><em>In Situ Origins of Hot Jupiter Isolation.</em> Great Lakes Exoplanet Area Meeting 2022.</li>
   										<li><em>The X-ray Luminosity Function of Optically Narrow and Broad-line AGNs Out To 𝑧 ∼ 4.</em> Fall 2020 IU Astronomy Lunch
 Talk Series</li>
