--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 							<!--<ul class="actions">-->
 							<a href="cv.html" class="button style3 large">CV</a>
 							<!--</ul>-->
+						</div>
+						<div id="logo">
 							<img src="images/profheadshot_2021_square.jpg" alt="Prof headshot" width="300" height="300">
 						</div>
 					
