--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,7 @@
 						<!-- Content -->
 							<div id="content">
 								<article class="box post">
-									<p class="style1">See my <a href="cv.html">CV</a> for the most complete and up-to-date list of publications.</p>
+									<p style="text-align: center;">See my <a href="cv.html">CV</a> for the most complete and up-to-date list of publications.</p>
 									<header class="style1">
 										<h2>First-Author Refereed Works</h2>
 										<!--<p>Tempus feugiat veroeros sed nullam dolore</p>-->
