--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,7 @@
 						<!-- Content -->
 							<div id="content">
 								<article class="box post">
-									<p style="text-align: center;">See my <a href="cv.html">CV</a> for the most complete and up-to-date list of publications.</p>
+									<p style="text-align: center;">See my <a href="cv.html">CV</a> for the most complete and up-to-date list of publications (my ORCID ID is <a href="https://orcid.org/0000-0002-0015-382X">0000-0002-0015-382X</a>).</p>
 									<header class="style1">
 										<h2>First-Author Refereed Works</h2>
 										<!--<p>Tempus feugiat veroeros sed nullam dolore</p>-->
@@ -65,7 +65,7 @@
 									</header>
 									<p><font size="+2">
 									<ol style="color:black;">
-										<li>Cassandra Seltzer, Rudi Lien, Brandon Radzom, et al. 2024. THUNDER: A Titan orbiter mission concept for the New Frontiers program, <em>submitted to PSJ</em></li>
+										<li>Cassandra Seltzer, Rudi Lien, <strong>Brandon T. Radzom</strong>, et al. 2024. THUNDER: A Titan orbiter mission concept for the New Frontiers program, <em>submitted to PSJ</em></li>
 										<li>Jack Lubin, Xian-Yu Wang, Malena Rice, Jiayin Dong, Songhu Wang, <strong>Brandon T. Radzom</strong>, et al. 2023. TOI-1670 c, a 40 day
 											Orbital Period Warm Jupiter in a Compact System, Is Well Aligned, <em>ApJL</em>, 959 L5</li>
 										<li>Xian-Yu Wang, Malena Rice, Songhu Wang, Bonan Pu, Gudmundur Stefánsson, Suvrath Mahadevan, <strong>Brandon T. Radzom</strong>, et al. 2022. The Aligned
