--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
 			<!-- Intro -->
 				<section id="intro" class="wrapper style1">
 					<div class="title">About Me</div>
-					<ul class="actions">
+					<div class="wrapper">
+    						<a href="cv.html" class="button style3 large">CV</a>
+					</div>
+					<!--<ul class="actions">
 						<a href="cv.html" class="button style3 large">CV</a>
-					</ul>
+					</ul>-->
 					<div class="container">
 						<aside>
 						  <img src="images/brandon_gleam2022_cropped.jpg" width="280" height="280" align="right" class="block"
