--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 			<!-- Intro -->
 				<section id="intro" class="wrapper style1">
 					<div class="title">About Me</div>
-					<div class="wrapper">
-    						<a href="cv.html" class="button style3 large">CV</a>
-					</div>
+					<p class="style1 text-align: center;">
+    						<a href="cv.html" class="button style3 large text-align: center;">CV</a>
+					</p>
 					<!--<ul class="actions">
 						<a href="cv.html" class="button style3 large">CV</a>
 					</ul>-->
