--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 			<!-- Intro -->
 				<section id="intro" class="wrapper style1">
 					<div class="title">About Me</div>
-					<p class="style1 text-align: center;">
-    						<a href="cv.html" class="button style3 large text-align: center;">CV</a>
+					<p style="text-align: center;">
+    						<a href="cv.html" class="button style3 large;">CV</a>
 					</p>
 					<!--<ul class="actions">
 						<a href="cv.html" class="button style3 large">CV</a>
