--- a/cv.html
+++ b/cv.html
@@ -23,6 +23,9 @@
 							<p>Click<a href="/Radzom_CV.pdf" here>
   								<img src="/Radzom_CV.pdf" alt="here">
 							</a> to download</p>
+							<p style="text-align: center;">
+    								<a href="/Radzom_CV.pdf" class="button style3 large;">Download CV</a>
+							</p>
 							
 						</div>
 
