--- a/cv.html
+++ b/cv.html
@@ -20,11 +20,11 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1><a href="index.html">Curriculum Vitae</a></h1>
-							<p>Click<a href="/Radzom_CV.pdf" here>
+							<!--<p>Click<a href="/Radzom_CV.pdf" here>
   								<img src="/Radzom_CV.pdf" alt="here">
-							</a> to download</p>
+							</a> to download</p>-->
 							<p style="text-align: center;">
-    								<a href="/Radzom_CV.pdf" class="button style1 large;">Download CV</a>
+    								<a href="/Radzom_CV.pdf" class="button style2 large;">Download CV</a>
 							</p>
 							
 						</div>
