--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
 								Propulsion Laboratory, August 2023.</figcaption>-->
 						</aside>
 						<p class="style1">When not doing science, I am likely on my feet. First and foremost, I am an avid long distance
-						runner of 10+ years. These days, I mainly run full marathons, and plan to participate in the 2025 Boston Marathon.
-						I also love hiking anywhere out in nature; anything with lakes, rivers, and mountains are a plus! Originating from
-						Minnesota, I try to make the most of my winters by cross-country skiing. Recently, I've also taken up ultimate frisbee.</p>
+						runner. These days, I mainly run marathons, and plan to participate in the 2025 Boston Marathon.
+						I also love hiking, and have particularly enjoyed my visits to several National Parks. Originating from
+						Minnesota, I try to make the most of my winters by cross-country skiing. I also dabble in ultimate frisbee and indoor climbing
+							(at a very <em>novice</em> level!).</p>
 						<!--<p class="style2">
 							Big text
 						</p>
