--- a/research.html
+++ b/research.html
@@ -46,21 +46,22 @@
 								<article class="box post">
 									<header class="style1">
 										<h2>Dynamical Origins of Short-Period Giants (under construction)</h2>
+										<p>2021-Present</p>
 									</header>
-									<p>2021-Present</p>
+									
 									<div>
-										<img src="images/HJ_irradiated.jpg" width="468" height="347" align="left" style="margin: 20px 20px 20px 20px;" alt="NASA/Ames/JPL-Caltech" />
-										<p>Image Credit: NASA/Ames/JPL-Caltech</p>
+										<img src="images/HJ_irradiated_pc.jpg" width="468" height="347" align="left" style="margin: 10px 20px 10px 20px;" alt="NASA/Ames/JPL-Caltech" />
 									</div>
 									<p>Hot Jupiters, the shortest-period class of gas giants, are conventionally thought
 									to form through dynamically violent processes such as high-eccentricity migration.
-									Some of the most commonly referenced pieces of observational evidence for this are:</p>
+									Some of the most commonly referenced pieces of observational evidence for this are:
 										<ul>
 											<li>The near-zero rate of nearby planetary companions to hot Jupiters 
 												(see Steffen et al. 2012, Huang et al. 2016)</li>
 											<li>The presence of large misalignments in the stellar obliquity distribution of hot Jupiters 
 												(see Schlaufman et al. 2010, Winn et al. 2010, Albrecht et al. 2012)</li>
 										</ul>  
+									</p>
 
 									 <p>However, the somewhat wider-orbiting counterparts to hot Jupiters, known as warm Jupiters, may
 										 not share these properties, while their somewhat less massive counterparts, known as sub-Saturns,
