--- a/research.html
+++ b/research.html
@@ -55,7 +55,7 @@
 									<p>Hot Jupiters, the shortest-period class of gas giants, are conventionally thought
 									to form through dynamically violent processes such as high-eccentricity migration.
 									Some of the most commonly referenced pieces of observational evidence for this are:
-										<ul>
+										<ul style="margin-left: 20px">
 											<li>The near-zero rate of nearby planetary companions to hot Jupiters 
 												(see Steffen et al. 2012, Huang et al. 2016)</li>
 											<li>The presence of large misalignments in the stellar obliquity distribution of hot Jupiters 
@@ -74,22 +74,26 @@
 										<h3>Stellar Obliquity Measurements Via The Rossiter-McLaughlin Effect</h3>
 									</header>
 									<p>Stellar obliquity, or the angle between the stellar spin axis and the orbit normal axis of its planet(s), is a unqiue
-									and informative indicator of a system's dynamical history. Despite decades of effort, it remains unclear whether spin-orbit
-									misalignment takes place during formation, with the protoplanetary disk present, or post-formation following 
-									the disappearence of the disk.</p>
+									and informative indicator of a system's dynamical history. Despite decades of effort, it remains unclear whether
+									the primary mechanism driving spin-orbit misalignment is a universal process that takes place during formation, with the protoplanetary
+									disk present, or an evolution-specific process that occurs in post-disk phase, perhaps due to the violent dynamics inherent
+									to high-eccentricty migration. Compact multi-planet systems offer a unique opportunity to differentiate
+									between these competing hypotheses, as their
+									tightly-packed configurations preclude violent dynamical histories, including high-eccentricity migration, allowing
+									them to trace the primordial disk plane.</p>
 										
 									<p>The Rossiter-McLaughlin (RM) effect (Holt 1893, Rossiter 1924, McLaughlin 1924), which 
 									takes advantage of the time-resolved spectral effects of an actively transiting or eclipsing body, presents a reliable method
-									to determine a system's projected spin-orbit angle $\lambda$. With additional information on the stellar inclination, 
-									the true 3D stellar obliquity $\psi$ can be derived as well.</p>
+									to determine a system's projected spin-orbit angle. With additional information on the stellar inclination, 
+									the true 3D stellar obliquity can be derived as well.</p>
 									<header class="style1">
 										<h4>TOI-5143 (Radzom et al. 2024b, in prep.)</h4>
 									</header>
 									<p>TOI-5143 is a hot Jupiter in a compact multi-planet system recently discovered by NASA's Transiting Exoplanet Survey Satellite (TESS)
-										mission, and is only the <em>third</em> of such systems to have its stellar obliquity measured. We use the Doppler Shadow
-									method of the RM effect to measure its stellar obliquity, finding it is well-aligned. Our result continues the trend of alignemnt 
+										mission, and is only the <em>third</em> of such systems to have its stellar obliquity measured. We employ Bayesian Inference and the Doppler Shadow
+									technique to measure its stellar obliquity via the RM effect, finding it is well-aligned. Our result continues the trend of alignemnt 
 										seen in previous
-									spin-orbit measurements for other hot Jupiters with nearby companions (e.g., WASP-47 and WASP-84), as well as the current census of RM measurements
+									spin-orbit measurements for other hot Jupiters with nearby companions (e.g., WASP-47 b and WASP-84 b), as well as the current census of RM measurements
 									for compact multi-planet systems. This reinforces the hypothesis that planetary systems are largely primordially aligned,
 										with misalignments being acquired in the post-disk phase due to dynamical evolution. Further, our measurement
 									demonstrates that some hot Jupiters <em>must</em> have quiescent origins, having avoided achieving the large eccentricities
@@ -101,16 +105,9 @@
 									    <img src="images/subSat_RMs.jpg" width="1157" height="541" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
 									</div>
 									<p>Sub-Saturns, with masses intermediate of Neptune and Jupiter, represent an interesting population to study both the origins
-										of giant planets and the mechanisms by which the orbital axes of planets become misaligned with the stellar spin axes.
-										Despite decades of effort, the mechanisms by which the spin axis of a star and the orbital axes of its planets become
-										misaligned remain elusive. Particularly, it is of great interest whether the large spin-orbit misalignments observed
-										are driven primarily by high-eccentricity migration --- expected to have occurred for short-period, isolated planets
-										--- or reflect a more universal process that operates across systems with a variety of present-day architectures.
-										Compact multi-planet systems offer a unique opportunity to differentiate between these competing hypotheses, as their
-										tightly-packed configurations preclude violent dynamical histories, including high-eccentricity migration, allowing
-										them to trace the primordial disk plane. In this context, we report measurements of the sky-projected stellar obliquity
-										($\lambda$) via the Rossiter-McLaughlin effect for two sub-Saturns in multiple-transiting systems: TOI-5126\,b
-										($\lambda=1\pm 48 \degree$) and TOI-5398\,b ($\lambda=-24^{+14}_{-13} \degree$). Both are spin-orbit aligned,
+										of giant planets and the mechanisms driving misalignment. In this context, we report measurements of the sky-projected stellar obliquity
+										($\lambda$) via the Rossiter-McLaughlin effect for two sub-Saturns in compact multiple-transiting systems: TOI-5126\,b
+										($\lambda=1\pm 48 \degree$) and TOI-5398\,b ($\lambda=-8.1^{+6.3}_{-5.3} \degree$). Both are spin-orbit aligned,
 										joining a fast-growing group of just three other compact sub-Saturn systems, all of which exhibit spin-orbit alignment.
 										{\bf In aggregate with archival data, our} results strongly suggest that sub-Saturn systems are primordially aligned
 										and become misaligned largely in the post-disk phase, as appears to be the case increasingly for other exoplanet populations. 
@@ -124,8 +121,7 @@
 										<p>2021-2023</p>
 									</header>
 									
-									<p>The longest-standing mystery in the field of exoplanets is the origin of short-period gas giants, as the first exoplanet
-										discovered around a Sun-like star was a hot Jupiter, 51 Pegasi b.
+									<p>
 										Hot Jupiters, the shortest-period gas giants, have conventionally been thought
 										to form only through dynamically violent processes such as high-eccentricity migration.
 										One of the most commonly referenced pieces of evidence for this is the
